syntax = "proto3";

package bitscale.bitscale;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "bitscale/bitscale/params.proto";
import "bitscale/bitscale/denom.proto";

option go_package = "bitscale/x/bitscale/types";

// GenesisState defines the bitscale module's genesis state.
message GenesisState {
  
  // params defines all the parameters of the module.
           Params params    = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
           string port_id   = 2;
  repeated Denom  denomList = 3 [(gogoproto.nullable) = false] ;
}

