syntax = "proto3";
package bitscale.bitscale;

option go_package = "bitscale/x/bitscale/types";

message BitscalePacketData {
    oneof packet {
        NoData noData = 1;
    }
}

message NoData {
}
